--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 }
 
 version "0.1"
-group "starter"
+group "myestate"
 
 apply plugin: "eclipse"
 apply plugin: "idea"
@@ -60,6 +60,8 @@ dependencies {
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+    compile 'org.grails.plugins:spring-security-core:3.1.1'
+    compile "org.grails.plugins:spring-security-rest:2.0.0.M2"
 }
 
 task wrapper(type: Wrapper) {
@@ -67,6 +69,6 @@ task wrapper(type: Wrapper) {
 }
 
 assets {
-    minifyJs = true
+    minifyJs = false
     minifyCss = true
 }
