--- a/react/package.json
+++ b/react/package.json
@@ -16,17 +16,22 @@
     "bootstrap": "^3.3.5",
     "history": "^1.17.0",
     "isomorphic-fetch": "^2.1.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
+    "material-ui": "^0.15.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.0.0",
-    "redux": "^3.3.1"
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "redux-form": "^6.0.0-alpha.10",
+    "redux-saga": "^0.10.2"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel": "^5.8.38",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^5.1.2",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-polyfill": "^6.8.0",
     "chai": "^3.3.0",
     "css-loader": "^0.22.0",
     "eslint-plugin-react": "^2.3.0",
