--- a/react/package.json
+++ b/react/package.json
@@ -15,41 +15,44 @@
   "dependencies": {
     "bootstrap": "^3.3.5",
     "history": "^1.17.0",
-    "isomorphic-fetch": "^2.1.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "redux": "^3.3.1"
+    "body-parser": "^1.15.1",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.0",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
+    "react-router-redux": "4.0.4"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.1.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "chai": "^3.3.0",
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "babel-runtime": "^6.6.1",
     "css-loader": "^0.22.0",
-    "eslint-plugin-react": "^2.3.0",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "jsdom": "^6.5.1",
+    "style-loader": "^0.13.1",
+    "file-loader": "^0.8.5",
+    "url-loader": "^0.5.7",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
-    "mocha": "^2.3.3",
-    "nock": "^2.15.0",
-    "react-addons-test-utils": "^0.14.0",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.0.1",
-    "redux-devtools": "^2.1.5",
-    "redux-logger": "^2.0.4",
-    "sinon": "^1.17.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.0.0"
+    "express": "^4.13.4",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "6.2.0",
+    "eslint-plugin-react": "^5.0.1"
   },
   "license": "UNLICENSED"
 }
